syntax = "proto3";

package api.v1;
option go_package = "github.com/intelops/compage/core/gen/api/v1;project";

service ProjectService {
  rpc GenerateCode (GenerateCodeRequest) returns (stream GenerateCodeResponse) {}
  rpc RegenerateCode (GenerateCodeRequest) returns (stream GenerateCodeResponse) {}
}

message GenerateCodeRequest {
  string json = 1;
  string userName = 2;
  string projectName = 3;
  string repositoryName = 4;
  string metadata = 5;
  string repositoryIsPublic = 6;
  string repositoryBranch = 7;
  string platformName = 8;
  string platformUrl = 9;
  string platformUserName = 10;
  string platformPassword = 11;
  string platformEmail = 12 ;
}

message GenerateCodeResponse{
  bytes fileChunk = 1;
}