syntax = "proto3";

package api.v1;
option go_package = "github.com/kube-tarian/compage-core/gen/api/v1;project";

service ProjectService {
  rpc CreateProject (ProjectRequest) returns (stream ProjectResponse) {}
//  rpc UpdateProject (ProjectRequest) returns (stream ProjectResponse) {}
}

message ProjectRequest {
  string yaml = 1;
  string user = 2;
  string name = 3;
  string repository = 4;
}

message ProjectResponse{
  bytes fileChunk = 1;
}